Change indicators being mandatory, optional or parameter to indicators being mandatory, optional or forbidden for new projects

--- a/client/dev/partials/indicators/edit.html
+++ b/client/dev/partials/indicators/edit.html
@@ -28,7 +28,7 @@
 				<select id="input-operation" class="form-control" ng-model="indicator.operation">
 					<option value="mandatory" translate="indicator.is_mandatory"></option>
 					<option value="common" translate="indicator.is_common"></option>
-					<option value="parameter" translate="indicator.is_parameter"></option>
+					<option value="parameter" translate="indicator.is_forbidden"></option>
 				</select>
 			</div>
 		</div>
