Comment out the modification warning on forms for now. I think is should be alright to change without creating new ones now that we differenciate raw data and indicator computation.
We do need to insure that there are no dead links between the 2 tabs.

--- a/client/dev/partials/projects/form-edit.html
+++ b/client/dev/partials/projects/form-edit.html
@@ -6,7 +6,7 @@
 </ol>
 
 <form class="form-horizontal" role="form" name="formForm" novalidate>
-	<div class="alert alert-danger" ng-if="!isNew" acl-has-project-role="owner" translate="project.form_warning"></div>
+	<!-- <div class="alert alert-danger" ng-if="!isNew" acl-has-project-role="owner" translate="project.form_warning"></div> -->
 
 	<tabset>
 		<tab heading="{{'project.planning'|translate}}">
