Add an option to group by quarters

--- a/client/dev/partials/indicators/reporting.html
+++ b/client/dev/partials/indicators/reporting.html
@@ -34,6 +34,7 @@
 							<option value="day" translate="shared.day"></option>
 							<option value="week" translate="shared.week"></option>
 							<option value="month" translate="shared.month"></option>
+							<option value="quarter" translate="shared.quarter"></option>
 							<option value="year" translate="shared.year"></option>
 						</select>
 					</div>
