--- a/client/dev/partials/_directives/reporting-query.html
+++ b/client/dev/partials/_directives/reporting-query.html
@@ -52,6 +52,7 @@
 							<option value="day" translate="shared.day"></option>
 							<option value="week" translate="shared.week"></option>
 							<option value="month" translate="shared.month"></option>
+							<option value="quarter" translate="shared.quarter"></option>
 							<option value="year" translate="shared.year"></option>
 							<option value="entity" translate="shared.input_entity"></option>
 							<option value="group" translate="shared.input_group"></option>
