--- a/client/dev/partials/projects/list.html
+++ b/client/dev/partials/projects/list.html
@@ -1,3 +1,8 @@
+<ol class="breadcrumb">
+	<li class="active" translate="shared.projects"></li>
+	<li class="active" translate="shared.list"></li>
+</ol>
+
 <input type="checkbox" ng-model="showFinished" id="filter-finished" />
 <label for="filter-finished" translate>project.show_finished</label>
 
