--- a/client/dev/partials/_directives/form-edit-field.html
+++ b/client/dev/partials/_directives/form-edit-field.html
@@ -1,4 +1,9 @@
-<td ng-bind="indicator.name"></td>
+<td>
+	<a ng-click="remove()" class="remove-action" ng-if="field.indicatorId">
+		<i class="fa fa-times" style="color: red"></i>
+	</a>
+	{{indicator.name}}
+</td>
 <td form-edit-field-summable type="geo" field="field" indicator="indicator"></td>
 <td form-edit-field-summable type="time" field="field" indicator="indicator"></td>
 <td>
