--- a/client/dev/partials/projects/form-edit.html
+++ b/client/dev/partials/projects/form-edit.html
@@ -65,8 +65,8 @@
 				<div class="col-sm-10">
 					<div class="input-group" acl-has-project-role="owner">
 						<div class="input-group-addon">
-							<input type="checkbox" ng-model="form.useProjectStart" />
-							{{'project.begin'|translate}}
+							<input type="checkbox" ng-model="form.useProjectStart" id="use-project-start-input" />
+							<label for="use-project-start-input" style="font-weight: normal; display: inline; ">{{'project.begin'|translate}}</label>
 						</div>
 
 						<input type="text" 
@@ -124,8 +124,8 @@
 				<div class="col-sm-10">
 					<div class="input-group" acl-has-project-role="owner">
 						<div class="input-group-addon">
-							<input type="checkbox" ng-model="form.useProjectEnd" />
-							{{'project.end'|translate}}
+							<input type="checkbox" ng-model="form.useProjectEnd" id="use-project-end-input" />
+							<label for="use-project-end-input" style="font-weight: normal; display: inline; ">{{'project.end'|translate}}</label>
 						</div>
 
 						<input type="text" 
