--- a/client/dev/partials/projects/logical-frame.html
+++ b/client/dev/partials/projects/logical-frame.html
@@ -1,33 +1,5 @@
-<!-- <table class="table table-bordered print-only">
-	<thead>
-		<tr>
-			<th>What</th>
-			<th colspan="2">How Much</th>
-			<th colspan="4">When</th>
-			<th>How</th>
-			<th>Where</th>
-			<th colspan="2">Who</th>
-			<th>Why</th>
-		</tr>
-		<tr>
-			<th>Consolidated list of Indicators</th>
-			<th>Baseline</th>
-			<th>Target</th>
-			<th>M</th>
-			<th>Q</th>
-			<th>A</th>
-			<th>O</th>
-			<th>Calculation of indicator</th>
-			<th>Sources of verification</th>
-			<th>Data collection</th>
-			<th>Data analysis</th>
-			<th>Pertinence</th>
-		</tr>
-	</thead>
-	<tbody>
-		
-	</tbody>
-</table> -->
+
+<div print-logframe class="print"></div>
 
 <ol class="breadcrumb noprint">
 	<li><a ui-sref="main.projects" translate="shared.projects"></a></li>
