--- a/client/dev/partials/projects/logical-frame.html
+++ b/client/dev/partials/projects/logical-frame.html
@@ -280,45 +280,31 @@
 									</div>
 								</div>
 
-								<div class="panel panel-default" ng-repeat="(activityId, activity) in output.activities" ng-init="tabOpen=false">
-									<div class="panel-heading">
-										<div class="panel-title">
-											<button class="btn btn-danger btn-xs pull-right" ng-click="removeActivity(activity, output)" acl-has-project-role="owner">
-												<i class="fa fa-remove"></i>
-												<span translate="shared.delete"></span>
-											</button>
-											<i class="fa" ng-class="{'fa-minus-circle': tabOpen, 'fa-plus-circle': !tabOpen}"></i>
-											<a ng-click="tabOpen = !tabOpen"> {{'project.activity'|translate}} {{purposeId + 1}}.{{outputId + 1}}.{{activityId + 1}}: {{activity.description}}</a>
-										</div>
-									</div>
-
-									<div class="panel-body" ng-show="tabOpen">
-										<ng-form name="activityForm">
-											<div class="form-group" show-errors>
-												<label for="activity-desc-{{purposeId}}-{{outputId}}-{{activityId}}-input"
-													   class="col-sm-2 control-label"
-													   translate="project.activity"></label>
-
-												<div class="col-sm-10" acl-has-project-role="owner" acl-fallback="activity.description">
+								<div class="form-group">
+									<label class="col-sm-2 control-label" translate="project.activities"></label>
+									<div class="col-sm-10">
+										<ng-form name="activityForm" ng-repeat="activity in output.activities">
+											<div class="form-group" show-errors style="margin: 0; padding:0">
+												<div class="input-group" style="margin-bottom: 5px; ">
 													<input type="text"
-														   id="activity-desc-{{purposeId}}-{{outputId}}-{{activityId}}-input"
 														   class="form-control"
 														   name="description"
 														   placeholder="{{'project.activity_desc_ph'|translate}}"
 														   ng-model="activity.description"
 														   required/>
 
-													<p class="help-block" ng-if="activityForm.description.$error.required" translate="form.mandatory"></p>
+													<span class="input-group-btn">
+														<button class="btn btn-danger ng-scope" ng-click="removeActivity(activity, output)" translate="shared.remove">Retirer</button>
+													</span>
 												</div>
 											</div>
 										</ng-form>
+
+										<p acl-has-project-role="owner">
+											<a ng-click="addActivity(output)" translate="project.add_indicator"></a>
+										</p>
 									</div>
 								</div>
-
-								<button class="btn btn-default" ng-click="addActivity(output)" acl-has-project-role="owner">
-									<i class="fa fa-plus"></i>
-									<span translate="project.add_activity"></span>
-								</button>
 							</ng-form>
 						</div>
 					</div>
