--- a/client/dev/partials/_directives/form-edit-field.html
+++ b/client/dev/partials/_directives/form-edit-field.html
@@ -1,4 +1,4 @@
-<td>
+<td acl-has-project-role="owner" acl-fallback="indicator.name">
 	<a ng-click="remove()" class="remove-action" ng-if="field.indicatorId">
 		<i class="fa fa-times" style="color: red"></i>
 	</a>
@@ -6,7 +6,7 @@
 </td>
 <td form-edit-field-summable type="geo" field="field" indicator="indicator"></td>
 <td form-edit-field-summable type="time" field="field" indicator="indicator"></td>
-<td>
+<td acl-has-project-role="owner">
 	<select
 		class="form-control input-sm"
 		ng-model="source"
@@ -17,3 +17,4 @@
 		<form-edit-filter element="source.element" value="field.filter"></form-edit-filter>
 	</div>
 </td>
+<td acl-lacks-project-role="owner">{{source.name}}</td>
