--- a/client/dev/partials/projects/input.html
+++ b/client/dev/partials/projects/input.html
@@ -18,11 +18,15 @@
 					<div class="form-group" ng-repeat="variable in section.elements">
 						<label for="raw-{{variable.id}}" class="col-sm-2 control-label" ng-bind="variable.name"></label>
 						<div class="col-sm-10">
-							<input ng-if="variable.partition1.length == 0 && variable.partition2.length == 0"
-								   class="form-control"
-								   ng-model="currentInput.values[variable.id]"
-								   placeholder="{{'project.last_input'|translate}}{{previousInput.values[variable.id] || '?'}}"
-								   type="number" />
+							<div ng-if="variable.partition1.length == 0 && variable.partition2.length == 0"
+								 acl-has-project-role="input"
+								 acl-fallback="currentInput.values[variable.id]">
+
+								<input class="form-control"
+									   ng-model="currentInput.values[variable.id]"
+									   placeholder="{{'project.last_input'|translate}}{{previousInput.values[variable.id] || '?'}}"
+									   type="number" />
+							</div>
 
 							<table ng-if="variable.partition1.length != 0 && variable.partition2.length == 0"
 								   class="table table-bordered table-condensed">
@@ -35,7 +39,7 @@
 								<tbody>
 									<tr ng-repeat="p in variable.partition1">
 										<td ng-bind="p.name"></td>
-										<td>
+										<td acl-has-project-role="input" acl-fallback="currentInput.values[variable.id][p.id]">
 											<input type="number"
 												   class="form-control input-sm"
 												   ng-model="currentInput.values[variable.id][p.id]"
@@ -63,7 +67,7 @@
 								<tbody>
 									<tr ng-repeat="p1 in variable.partition1">
 										<th ng-bind="p1.name"></th>
-										<td ng-repeat="p2 in variable.partition2">
+										<td ng-repeat="p2 in variable.partition2" acl-has-project-role="input" acl-fallback="currentInput.values[variable.id][p1.id][p2.id]">
 											<input type="number"
 												   class="form-control input-sm"
 												   ng-model="currentInput.values[variable.id][p1.id][p2.id]"
@@ -100,7 +104,7 @@
 								<tbody>
 									<tr ng-repeat="p2 in variable.partition2">
 										<th ng-bind="p2.name"></th>
-										<td ng-repeat="p1 in variable.partition1">
+										<td ng-repeat="p1 in variable.partition1" acl-has-project-role="input" acl-fallback="currentInput.values[variable.id][p1.id][p2.id]">
 											<input type="number"
 												   class="form-control input-sm"
 												   ng-model="currentInput.values[variable.id][p1.id][p2.id]"
@@ -130,8 +134,8 @@
 				</form>
 			</div>
 		</div>
-
 	</tab>
+
 	<tab heading="{{'shared.indicators'|translate}}">
 		<br/>
 
