--- a/client/dev/partials/indicators/list.html
+++ b/client/dev/partials/indicators/list.html
@@ -28,7 +28,7 @@
 
 		<div class="indicator-level-3" ng-repeat="indicator in type.children" ng-if="type.open">
 			<span class="pull-right">
-				{{indicator.__mainUsage}} <i class="fa fa-building-o"></i>
+				{{::indicator.__mainUsage}} <i class="fa fa-building-o"></i>
 
 				<a class="btn btn-xs btn-default"
 				   ui-sref="main.indicator.reporting({indicatorId: indicator._id})"
@@ -61,7 +61,7 @@
 				tooltip="{{'indicator.is_mandatory'|translate}}"
 				tooltip-placement="right"></i>
 			
-			{{indicator.name}}
+			{{::indicator.name}}
 		</div>
 	</div>
 </div>
