--- a/client/dev/partials/projects/reporting.html
+++ b/client/dev/partials/projects/reporting.html
@@ -64,7 +64,7 @@
 			<th></th>
 			<th translate="project.baseline"></th>
 			<th translate="project.target"></th>
-			<th ng-repeat="col in stats.cols track by col.id" ng-bind="col.name"></th>
+			<th ng-repeat="col in stats.cols track by col.id" ng-bind="::col.name"></th>
 		</tr>
 	</thead>
 	<tbody>
