Allow sorting projects by theme id

--- a/client/dev/partials/projects/list.html
+++ b/client/dev/partials/projects/list.html
@@ -11,7 +11,7 @@
 		<tr>
 			<th style="width: 55px"></th>
 			<th><a ng-click="pred='name';rev=!rev">{{'shared.name'|translate}}</a></th>
-			<th><a ng-click="pred='name';rev=!rev">{{'indicator.themes'|translate}}</a></th>
+			<th><a ng-click="pred='themes';rev=!rev">{{'indicator.themes'|translate}}</a></th>
 			<th><a ng-click="pred='begin';rev=!rev">{{'shared.begin'|translate}}</a></th>
 			<th><a ng-click="pred='end';rev=!rev">{{'shared.end'|translate}}</a></th>
 		</tr>
