--- a/client/dev/partials/indicators/edit.html
+++ b/client/dev/partials/indicators/edit.html
@@ -22,57 +22,59 @@
 			</div>
 		</div>
 
-		<div class="form-group">
-			<label for="input-operation" class="col-sm-2 control-label" translate="indicator.operation"></label>
-			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.operation">
-				<select id="input-operation" class="form-control" ng-model="indicator.operation">
-					<option value="mandatory" translate="indicator.is_mandatory"></option>
-					<option value="common" translate="indicator.is_common"></option>
-					<option value="parameter" translate="indicator.is_forbidden"></option>
-				</select>
-			</div>
-		</div>
+		<div class="form-group" show-errors>
+			<label for="input-definition" class="col-sm-2 control-label" translate="indicator.definition"></label>
+			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.definition">
+				<textarea id="input-definition"
+						  name="definition"
+						  class="form-control"
+						  ng-model="indicator.definition"
+						  required
+						  placeholder="{{'indicator.definition_ph'|translate}}"></textarea>
 
-		<div class="form-group" ng-if="indicator.operation == 'common' || indicator.operation == 'mandatory'">
-			<label for="input-target" class="col-sm-2 control-label" translate="indicator.target"></label>
-			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.target">
-				<select id="input-target" class="form-control" ng-model="indicator.target">
-					<option value="lower_is_better" translate="indicator.lower_is_better"></option>
-					<option value="higher_is_better" translate="indicator.higher_is_better"></option>
-					<option value="around_is_better" translate="indicator.around_is_better"></option>
-					<option value="non_relevant" translate="indicator.non_relevant"></option>
-				</select>
+				<p class="help-block" ng-if="indicatorForm.definition.$error.required" translate="form.mandatory"></p>
 			</div>
 		</div>
 
 		<div class="form-group" show-errors>
-			<label for="input-description" class="col-sm-2 control-label" translate="shared.description"></label>
-			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.description">
-				<textarea id="input-description"
-						  name="description"
+			<label for="input-standard" class="col-sm-2 control-label" translate="indicator.standard"></label>
+			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.standard">
+				<input type="text"
+					   id="input-standard"
+					   name="standard"
+					   class="form-control"
+					   ng-model="indicator.standard"
+					   placeholder="{{'indicator.standard_ph'|translate}}"></textarea>
+			</div>
+		</div>
+
+		<div class="form-group" show-errors>
+			<label for="input-sources" class="col-sm-2 control-label" translate="indicator.sources"></label>
+			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.sources">
+				<input type="text"
+					   id="input-sources"
+					   name="sources"
+					   class="form-control"
+					   ng-model="indicator.sources"
+					   placeholder="{{'indicator.sources_ph'|translate}}"></textarea>
+			</div>
+		</div>
+
+		<div class="form-group" show-errors>
+			<label for="input-comments" class="col-sm-2 control-label" translate="indicator.comments"></label>
+			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.comments">
+				<textarea id="input-comments"
+						  name="comments"
 						  class="form-control"
-						  ng-model="indicator.description"
-						  required
-						  placeholder="{{'indicator.description_ph'|translate}}"></textarea>
-
-				<p class="help-block" ng-if="indicatorForm.description.$error.required" translate="form.mandatory"></p>
+						  ng-model="indicator.comments"
+						  placeholder="{{'indicator.comments_ph'|translate}}"></textarea>
 			</div>
 		</div>
 
-		<div class="form-group">
-			<label for="input-unit" class="col-sm-2 control-label" translate="indicator.unit"></label>
-			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.unit">
-				<select id="input-unit" name="unit" ng-model="indicator.unit" class="form-control">
-					<option value="" translate="indicator.other"></option>
-					<option value="%" translate="indicator.percent"></option>
-					<option value="‰" translate="indicator.permille"></option>
-				</select>
-			</div>
-		</div>
 	</fieldset>
 
 	<fieldset>
-		<legend translate="indicator.categorization"></legend>
+		<legend translate="indicator.metadata"></legend>
 
 		<div class="form-group">
 			<label for="input-themes" class="col-sm-2 control-label" translate="indicator.themes"></label>
@@ -96,6 +98,40 @@
 				</ui-select>
 
 				<p class="form-control-static" acl-lacks-role="indicator">{{indicator.types | getObjects:types | pluck:'name' | join:', '}}</p>
+			</div>
+		</div>
+
+		<div class="form-group">
+			<label for="input-operation" class="col-sm-2 control-label" translate="indicator.operation"></label>
+			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.operation">
+				<select id="input-operation" class="form-control" ng-model="indicator.operation">
+					<option value="mandatory" translate="indicator.is_mandatory"></option>
+					<option value="common" translate="indicator.is_common"></option>
+					<option value="parameter" translate="indicator.is_forbidden"></option>
+				</select>
+			</div>
+		</div>
+
+		<div class="form-group" ng-if="indicator.operation == 'common' || indicator.operation == 'mandatory'">
+			<label for="input-target" class="col-sm-2 control-label" translate="indicator.target"></label>
+			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.target">
+				<select id="input-target" class="form-control" ng-model="indicator.target">
+					<option value="lower_is_better" translate="indicator.lower_is_better"></option>
+					<option value="higher_is_better" translate="indicator.higher_is_better"></option>
+					<option value="around_is_better" translate="indicator.around_is_better"></option>
+					<option value="non_relevant" translate="indicator.non_relevant"></option>
+				</select>
+			</div>
+		</div>
+
+		<div class="form-group">
+			<label for="input-unit" class="col-sm-2 control-label" translate="indicator.unit"></label>
+			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.unit">
+				<select id="input-unit" name="unit" ng-model="indicator.unit" class="form-control">
+					<option value="" translate="indicator.other"></option>
+					<option value="%" translate="indicator.percent"></option>
+					<option value="‰" translate="indicator.permille"></option>
+				</select>
 			</div>
 		</div>
 	</fieldset>
