--- a/client/dev/css/app.css
+++ b/client/dev/css/app.css
@@ -2,7 +2,7 @@
 
 /*https://www.gv.com/portfolio/*/
 textarea {
-	resize: vertical;
+	resize: none;
 }
 
 .indicator-level-1, .indicator-level-2, .indicator-level-3 {
