--- a/client/dev/partials/indicators/edit.html
+++ b/client/dev/partials/indicators/edit.html
@@ -106,6 +106,7 @@
 			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.operation">
 				<select id="input-operation" class="form-control" ng-model="indicator.operation">
 					<option value="mandatory" translate="indicator.is_mandatory"></option>
+					<option value="recommended" translate="indicator.is_recommended"></option>
 					<option value="common" translate="indicator.is_common"></option>
 					<option value="parameter" translate="indicator.is_forbidden"></option>
 				</select>
