--- a/client/dev/partials/projects/logical-frame-indicator-selector.html
+++ b/client/dev/partials/projects/logical-frame-indicator-selector.html
@@ -26,6 +26,11 @@
 				tooltip="{{'indicator.is_mandatory'|translate}}"
 				tooltip-placement="right"></i>
 
+			<i class="fa fa-book fa-fw"
+				ng-if="project.themes.indexOf(theme._id) !== -1 && indicator.operation == 'recommended'"
+				tooltip="{{'indicator.is_recommended'|translate}}"
+				tooltip-placement="right"></i>
+
 			<i class="fa fa-external-link fa-fw"
 				ng-if="project.themes.indexOf(theme._id) === -1"
 				tooltip="{{'indicator.is_external'|translate}}"
