--- a/client/dev/partials/indicators/edit.html
+++ b/client/dev/partials/indicators/edit.html
@@ -113,7 +113,7 @@
 			</div>
 		</div>
 
-		<div class="form-group" ng-if="indicator.operation == 'common' || indicator.operation == 'mandatory'">
+		<div class="form-group" ng-if="indicator.operation != 'parameter'">
 			<label for="input-target" class="col-sm-2 control-label" translate="indicator.target"></label>
 			<div class="col-sm-10" acl-has-role="indicator" acl-fallback="indicator.target">
 				<select id="input-target" class="form-control" ng-model="indicator.target">
