Fix translation on logical-frame.html (add_indicator => add_activity) Move button from logical-frame.html to logical-frame-indicator-edition.html

--- a/client/dev/partials/projects/logical-frame-indicator-edition.html
+++ b/client/dev/partials/projects/logical-frame-indicator-edition.html
@@ -139,7 +139,12 @@
 		<span translate="shared.edit"></span>
 	</button>
 
-	<button ng-click="delete()" class="btn btn-danger" ng-if="!isNew" acl-has-project-role="owner" ng-disabled="!isDeletable">
+	<button ng-click="detach()" class="btn btn-default" ng-if="!isNew && isDetachable" acl-has-project-role="owner">
+		<i class="fa fa-arrow-down"></i>
+		<span translate="shared.detach"></span>
+	</button>
+
+	<button ng-click="delete()" class="btn btn-danger" ng-if="!isNew && isDeletable" acl-has-project-role="owner">
 		<i class="fa fa-remove"></i>
 		<span translate="shared.delete"></span>
 	</button>
