Stop counting number of inputs by indicator. It cannot be done since we use forms with raw data now.

--- a/client/dev/partials/indicators/list.html
+++ b/client/dev/partials/indicators/list.html
@@ -28,11 +28,11 @@
 
 		<div class="indicator-level-3" ng-repeat="indicator in type.children" ng-if="type.open">
 			<span class="pull-right">
-				{{::indicator.__mainUsage}} <i class="fa fa-building-o"></i>
+				{{::indicator.__usage}} <i class="fa fa-building-o"></i>
 
 				<a class="btn btn-xs btn-default"
 				   ui-sref="main.indicator.reporting({indicatorId: indicator._id})"
-				   ng-if="indicator.__mainUsage"
+				   ng-if="indicator.__usage"
 				   translate="shared.reporting"></a>
 
 				<a class="btn btn-xs btn-default"
