--- a/client/dev/partials/indicators/selector-popup.html
+++ b/client/dev/partials/indicators/selector-popup.html
@@ -26,7 +26,7 @@
 
 			<div class="indicator-level-3" ng-repeat="indicator in type.children" ng-if="type.open">
 				<span class="pull-right">
-					{{indicator.__mainUsage}} <i class="fa fa-building-o"></i>
+					{{indicator.__usage}} <i class="fa fa-building-o"></i>
 
 					<a class="btn btn-xs btn-default"
 					   ng-click="choose(indicator._id)"
